// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "minHeight": 44,
          "paddingLeft": 15,
          "paddingRight": 20,
        },
        Object {
          "backgroundColor": "#FFF",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
              "letterSpacing": -0.32,
            },
            Object {
              "color": "#000",
            },
            Object {},
          ]
        }
      >
        Basic
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders with accessory 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "minHeight": 44,
          "paddingLeft": 15,
          "paddingRight": 20,
        },
        Object {
          "backgroundColor": "#FFF",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
              "letterSpacing": -0.32,
            },
            Object {
              "color": "#000",
            },
            Object {},
          ]
        }
      >
        Basic
      </Text>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#c7c7cc",
            "borderRightWidth": 1,
            "borderTopWidth": 1,
            "height": 10,
            "marginLeft": 7,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;
